	  minimum supported) (#14261)

	libpurple:
	* Fix a potential crash in the Log Reader plugin when reading QIP logs.
	* Fix a large number of strcpy() and strcat() invocations to use
	  strlcpy() and strlcat(), etc., forestalling an entire class of
	  string buffer overrun bugs.
	  (The Electronic Frontier Foundation, Dan Auerbach, Chris Palmer,
          Jacob Appelbaum)

	Gadu-Gadu:
	* Fixed searching for buddies in public directory. (Tomasz Wasilczyk)
	  (#5242)
	* Better status message handling. (Tomasz Wasilczyk) (#14314)
	* Merged two buddy blocking methods. (Tomasz Wasilczyk) (#5303)
	* Fix building of the bundled libgadu library with older versions
	  of GnuTLS. (patch plucked from upstream) (#14365)

	ICQ:
	* Fix crash selecting Tools->Set Mood when you're online with an
	  ICQ account that is configured as an AIM account. (#14437)

	IRC:
	* Fix the handling of formatting following mIRC ^O (#14436)

	MSN:
	* Fix seemingly random crashing. (#14307)

	XMPP:
	* Do not generate malformed XML ("</>") when setting an empty mood.
	  (#14342)
	* Fix the /join <room> behavior.  (Broken when adding support for
	  <room>@<server>)  (#14205)

	Yahoo!/Yahoo! JAPAN:
	* Fix coming out of idle while in an unavailable state
	* Fix logging into Yahoo! JAPAN.  (#14259)

version 2.9.0 (06/23/2011):
	Pidgin:
	* Fix a potential remote denial-of-service bug related to displaying
	  buddy icons.
	* Significantly improved performance of larger IRC channels (regression
	  introduced in 2.8.0).
	* Fix Conversation->Add on AIM and MSN.
	* Entries in the chat user list are sorted properly again.  This was
	  inadvertenly broken in 2.8.0.

	Finch:
	* Fix logging in to ICQ.

	libpurple:
	* media: Actually use the specified TCP port from the TURN configuration to
	  create a TCP relay candidate.

	AIM and ICQ:
	* Fix crashes on some non-mainstream OSes when attempting to
	  printf("%s", NULL).  (Clemens Huebner) (#14297)

	Plugins:
	* The Evolution Integration plugin compiles again.
